--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <activity
-            android:name=".ui.activity.DailyDetailsActivity">
+            android:name=".ui.activity.InfoDetailsActivity">
         </activity>
 
         <activity
